# libcxxext

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  checks.json  codestyle.md
.github/workflows/: presubmit.yml
build-msvc/: CMakeCache.txt
cmake/: build_support.cmake  catch2.cmake  clang_tidy.cmake  clang_tidy_script.cmake  config_support.cmake  gen_module_header.cmake  stdc++.cmake  stdc.cmake  target_common.cmake
core/: CompilerWarnings.h  InplaceQueue.h  InplaceString.h  LanguageSupport.h  ManagedArray.h  SpinLock.h  TaskEx.h  Thread.h  rt_generic.cpp  rt_required_generic.h
core/module/: sys.hpp
examples/: CMakeLists.txt  example_task.cpp  task.cpp
libsyscor/: CMakeLists.txt
sys/: Aggregate.h  AlignedStorage.h  Allocator.h  BitTwiddling.h  CMakeLists.txt  CompilerWarnings.h  Destructor.h  Exception.h  FloatingPoint.h  InplaceAtomicSet.h  InplaceSet.h  InplaceVector.h  Integer.h  LanguageSupport.h  Lifetime.h  Numeric.h  Option.h  Platform.h  Pointer.h  RecurringTemplate.h  ResourceGuard.h  Result.h  StringEx.h  TaskEx.h  Traits.h  Vector.h  cxxsup.h  rt.h  rt_required_generic.h  scratch.cpp
sys.Alloc/: Alloc.h  CMakeLists.txt
sys.Alloc/module/: sys.Alloc
sys.Containers/: CMakeLists.txt  ContainerErrors.h  InplaceAtomicSet.h  InplaceQueue.h  InplaceSet.h  InplaceString.h  InplaceVector.h  ManagedArray.h  Ranges.h  Span.h  Vec.h
sys.Containers/module/: sys.Containers
sys.Mathematics/: Functions.h  Matrix.h  Quaternion.h  Vector.h
sys.Mathematics/module/: sys.Mathematics
sys.PlatformSupport.Alloc/: CMakeLists.txt
sys.PlatformSupport.Alloc/sup/: Alloc.h
sys.PlatformSupport.Threading/: CMakeLists.txt
sys.PlatformSupport.Threading/sup/: CondVarHandle.h  MutexHandle.h  ThreadHandle.h  ThreadingErrors.h
sys.Text/: CMakeLists.txt  Char.h  CodepointIterator.h  StringEx.h  StringLiteral.h
sys.Text/data/: UnicodeCCC.h  UnicodeCasing.h  UnicodeWhitespace.h
sys.Text/data_unicode/: ReadMe.txt
sys.Text/data_unicode/charts/: Readme.txt
sys.Text/data_unicode/charts/fr/: Readme.txt
sys.Text/data_unicode/security/: ReadMe.txt
sys.Text/data_unicode/uca/: ReadMe.txt
sys.Text/module/: sys.Text
sys.Threading/: CMakeLists.txt  ConditionVariable.h  Mutex.h  Once.h  SemaphoreEx.h  SpinLock.h  TaskEx.h  Thread.h  ThreadEx.h  ThreadingErrors.h  rt_threading_generic.cpp  rt_threading_generic.h  src.cpp
sys.Threading/module/: sys.Threading
sys.Threading/platform/: rt_threading.cpp  rt_threading.h
sys/data/: ClWarnClang.h  ClWarnGCC.h  ClWarnMSVC.h
sys/inline/: DeclareAggregate.inl  Integer.inl  Numeric.inl
sys/meta/: Builtin.h  Container.h  Function.h  InterfaceRequirements.h  NamedRequirements.h  Nullable.h  Properties.h  Type.h  TypeSwitch.h
sys/module/: sys  sys.Containers  sys.Containers.hpp  sys.Threading.hpp
sys/traits/: Empty.h  Ranges.h  RecurringTemplate.h  TriviallyRelocatable.h
tests/: CMakeLists.txt  allocator.cpp  libcxxext_allocator.cpp  template_for_tests.cpp
tests/sys/: aligned_storage_fuzz.cpp  allocator.cpp  allocator_fuzz.cpp  bit_ceil.cpp  destructor.cpp  integer.cpp  meta_builtin.cpp  meta_container.cpp  meta_container_adaptor.cpp  meta_function.cpp  meta_nullable_adaptor.cpp  meta_parameter_pack.cpp  meta_requirements.cpp  meta_type.cpp  nr2ixx.cpp  numeric_cast.cpp  resource_guard.cpp  result.cpp  sentinel.cpp  thread.cpp  traits_concepts.cpp  traits_meta.cpp  traits_named_requirements.cpp  xfxx.cpp  xfxx_fuzz.cpp
tests/sys.Alloc/: allocator.cpp  allocator_fuzz.cpp  system_allocator.cpp
tests/sys.Containers/: vec.cpp
tests/sys.Text/: char.cpp  char_fuzz.cpp  str32_iter.cpp  str32_iter_fuzz.cpp  strchar_case.cpp  strchar_whitespace.cpp  string.cpp  string_fuzz.cpp  strlit.cpp
tests/sys.Threading/: cond_var.cpp  cond_var_fuzz.cpp  mutex.cpp  mutex_fuzz.cpp  once.cpp  semaphore.cpp  semaphore_fuzz.cpp  thread.cpp  thread_fuzz.cpp
workflows/: all_findings.py  all_push.py  build.py  conf.py  coverage.py  cppbuild.py  cppconf.py  cppcov.py  cppfmt.py  cpplint.py  cpppack.py  cpptest.py  docgen.py  format.py  pylint.py  template.py  test.py  tidy.py
workflows/lib/: config.py  exec.py  lockfile.py  log.py  uni.py
workflows/scripts/: fetch_latest_unicode_data.py  generate_clang_warnings.py  generate_gcc_warnings.py  generate_msvc_warnings.py  generate_unicode_casing.py  generate_unicode_ccc.py  generate_unicode_whitespace.py  wrap_clang_tidy.py
workflows/tools/: cl.py  clang_format.py  clang_tidy.py  cmake.py  cpack.py  ctest.py  doxygen.py  gcovr.py  mypy.py
